# CS50_Python_Final_Project

./: .env.docker  .gitignore  API_management.py  README.md  argparse_management.py  docker-compose.dev.yml  docker-compose.yml  files  libraries.py  login_management.py  main.py  pyproject.toml  pytest_login.py  requirements.txt  tests.py  user_menu.py
csv_files/: Accounts.csv  Acounts.csv
csv_files/account_directory/Ali/: Prices.csv  Watchlist.csv
csv_files/account_directory/Amir Garmabaki/: Prices.csv  Watchlist.csv
csv_files/account_directory/Mahdieh Ahmadi/: Prices.csv  Watchlist.csv
csv_files/account_directory/Parsa/: Prices.csv  Watchlist.csv
csv_files/account_directory/Parsa Garmabaki/: Prices.csv  Watchlist.csv
csv_files/account_directory/Parsa soleimani/: Prices.csv
final_project/: __init__.py  api_clients.py  cli.py  config.py  main.py  models.py  repositories.py  services.py  web.py
terminal_ui/: API_management.py  argparse_management.py  login_management.py  main.py  test_API_management.py  test_login_management.py  test_usermenu.py  tests.py  user_menu.py
test_files/: API_management.py  argparse_management.py  main.py
tests/: test_repositories.py  test_services.py  test_web.py
web-client/: .env.example  Dockerfile  README.md  nginx.conf
web-client/src/: App.tsx
web_ui/: DEPLOYMENT_OPTIONS.md  DOCKER_COMPOSE_DEPLOYMENT.md  Dockerfile  UBUNTU_SERVER_CONFIG.md  docker-compose.yml
web_ui/final_project/: __init__.py  cli.py  config.py  main.py  models.py  repositories.py  services.py  web.py
web_ui/web-client/: .dockerignore  Dockerfile.dev  index.html  package-lock.json  package.json
(+28 files in other folders)
