[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "final_project"
version = "0.1.0"
description = "Final project with decoupled architecture"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=1.10.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black",
    "isort",
    "mypy",
]

[tool.setuptools.packages.find]
include = ["final_project*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
