[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "final_project"
version = "0.1.0"
description = "MarketWatch - Currency Watchlist Manager with Terminal and Web UI"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=1.10.10",
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
marketwatch-cli = "terminal_ui.main:main"
marketwatch-web = "web_ui.final_project.web:app"

[tool.setuptools.packages.find]
include = ["terminal_ui*", "web_ui*"]

[tool.pytest.ini_options]
testpaths = ["web_ui/tests"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
